--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
     <body>
         <nav>
-            <a class="logo" href="/">Meu Café</a>
+            <a class="logo">Meu Café</a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="#">Tipos de Cafés</a></li>
-                <li><a href="#">Nosso Cardápio</a></li>
-                <li><a href="#">Cafés Clássicos</a></li>
-                <li><a href="#">Cafés Especiais</a></li>
+                <li><a href="/tipoDeCafe.html">Tipos de Cafés</a></li>
+                <li><a href="/home.html">Nosso Cardápio</a></li>
+                <li><a href="/home.html">Cafés Clássicos</a></li>
+                <li><a href="/home.html">Cafés Especiais</a></li>
             </ul>
         </nav>
         <header>
